<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Saurus</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="help">About</string>
    <string name="sound">Sound effects</string>
    <string name="sound_summary">Toggle sound effects on or off.</string>
    <string name="themes">Themes</string>
    <string name="themes_summary">Choose a theme for your game.</string>
    <string name="choose_theme">Choose a theme</string>
    <string name="theme_default">Classic</string>
    <!-- <string name="rate">Rate this app</string>
    <string name="rate_summary">This will open the Google Play store.</string> -->
    <string name="help_msg">Quickly tap the circles as they change color!</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="dismiss">(Tap to dismiss)</string>
    <string name="play_help">Tap here to play!</string>
    <string name="blank_hint">Don\'t tap the empty circles!</string>
    <string name="arrow5_desc">Arrow pointing from normal circle to active circle</string>
    <string name="arrow3_desc">Arrow pointing to blank circle</string>
    <string name="arrow4_desc">Arrow pointing to play button</string>

</resources>
