<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:theme="@style/Transparent"
    android:background="#88000000" >

    <TextView
        android:id="@+id/dismiss"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="20"
        android:gravity="bottom|center"
        android:textColor="#FFFFFF"
        android:text="@string/dismiss" />
    
    <TextView
        android:id="@+id/main_help"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="20"
        android:gravity="bottom|center"
        android:text="@string/help_msg"
        android:padding="15dip"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/textFontSize" />
    
    <LinearLayout
        android:id="@+id/circles"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="15"
        android:orientation="horizontal" >
        
        <com.nigu.saurus.CircleView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.25" />

        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:src="@drawable/arrow1"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:contentDescription="@string/arrow1_desc" />

        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:src="@drawable/arrow2"
            android:paddingLeft="10dp"
            android:paddingBottom="20dp"
            android:contentDescription="@string/arrow2_desc" />

        <com.nigu.saurus.CircleView
            android:id="@+id/active_example"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.25" />
        
    </LinearLayout> 
        
    <LinearLayout
        android:id="@+id/blank"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="15"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/blank_hint"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1.75"
            android:padding="20dip"
            android:text="@string/blank_hint"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/textFontSize"
            android:gravity="center" />
        
        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:src="@drawable/arrow3"
            android:contentDescription="@string/arrow3_desc"
            android:paddingBottom="12dip"
            android:paddingRight="5dip" />
        
        <com.nigu.saurus.CircleView
            android:id="@+id/blank_example"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="15"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        
        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/arrow4"
            android:contentDescription="@string/arrow4_desc"
            android:gravity="right"
            android:paddingTop="30dip"
            android:paddingLeft="20dip" />
        
        <TextView
	        android:id="@+id/play_hint"
	        android:layout_width="0px"
	        android:layout_height="match_parent"
	        android:layout_weight="1.5"
	        android:textSize="@dimen/textFontSize"
	        android:gravity="center"
	        android:paddingRight="30dip"
	        android:textColor="#FFFFFF"
	        android:text="@string/play_help" />
        
    </LinearLayout>

    
    <LinearLayout
        android:id="@+id/placeholder2"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="15"
        android:orientation="horizontal" >
            
       	<TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />
       	
       	<com.nigu.saurus.PlayView
            android:id="@+id/play_example"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
       	
       	<TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        
    </LinearLayout>

</LinearLayout>
